// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SetDateForm for TM Release Date > should match the Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-field ons-u-mb-m"
        id="radio-_r_7_"
      >
        <fieldset
          class="ons-fieldset"
        >
          <legend
            class="ons-fieldset__legend ons-u-fs-r--b"
          />
          <div
            class="ons-grid"
          >
            <div
              class="ons-grid__col ons-col-8@m ons-col-6@l"
            >
              <div
                class="ons-input-items"
              >
                <div
                  class="ons-radios__items"
                >
                  <span
                    class="ons-radios__item"
                  >
                    <span
                      class="ons-radio"
                    >
                      <input
                        class="ons-radio__input"
                        id="no"
                        name="askToSetDate"
                        props="[object Object]"
                        type="radio"
                        value="no"
                      />
                      <label
                        class="ons-radio__label "
                        for="no"
                      >
                        No release date
                      </label>
                    </span>
                  </span>
                  <br />
                  <span
                    class="ons-radios__item"
                  >
                    <span
                      class="ons-radio"
                    >
                      <input
                        class="ons-radio__input"
                        id="yes"
                        name="askToSetDate"
                        props="[object Object]"
                        type="radio"
                        value="yes"
                      />
                      <label
                        class="ons-radio__label "
                        for="yes"
                      >
                        Yes, let me specify a release date
                      </label>
                      <span
                        class="ons-radio__other ons-radio__other--open"
                        id="yes-other-wrap"
                      >
                        <label
                          class="ons-label ons-u-fs-s--b"
                          for="set-live-date"
                        >
                          Please specify date
                        </label>
                        <input
                          class="ons-input ons-input--text ons-input-type__input ons-input--w-auto"
                          id="set-live-date"
                          name="set release date"
                          type="date"
                        />
                      </span>
                    </span>
                  </span>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-field ons-u-mb-m"
      id="radio-_r_7_"
    >
      <fieldset
        class="ons-fieldset"
      >
        <legend
          class="ons-fieldset__legend ons-u-fs-r--b"
        />
        <div
          class="ons-grid"
        >
          <div
            class="ons-grid__col ons-col-8@m ons-col-6@l"
          >
            <div
              class="ons-input-items"
            >
              <div
                class="ons-radios__items"
              >
                <span
                  class="ons-radios__item"
                >
                  <span
                    class="ons-radio"
                  >
                    <input
                      class="ons-radio__input"
                      id="no"
                      name="askToSetDate"
                      props="[object Object]"
                      type="radio"
                      value="no"
                    />
                    <label
                      class="ons-radio__label "
                      for="no"
                    >
                      No release date
                    </label>
                  </span>
                </span>
                <br />
                <span
                  class="ons-radios__item"
                >
                  <span
                    class="ons-radio"
                  >
                    <input
                      class="ons-radio__input"
                      id="yes"
                      name="askToSetDate"
                      props="[object Object]"
                      type="radio"
                      value="yes"
                    />
                    <label
                      class="ons-radio__label "
                      for="yes"
                    >
                      Yes, let me specify a release date
                    </label>
                    <span
                      class="ons-radio__other ons-radio__other--open"
                      id="yes-other-wrap"
                    >
                      <label
                        class="ons-label ons-u-fs-s--b"
                        for="set-live-date"
                      >
                        Please specify date
                      </label>
                      <input
                        class="ons-input ons-input--text ons-input-type__input ons-input--w-auto"
                        id="set-live-date"
                        name="set release date"
                        type="date"
                      />
                    </span>
                  </span>
                </span>
                <br />
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SetDateForm for TO Start Date > should match the Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-field ons-u-mb-m"
        id="radio-_r_1_"
      >
        <fieldset
          class="ons-fieldset"
        >
          <legend
            class="ons-fieldset__legend ons-u-fs-r--b"
          />
          <div
            class="ons-grid"
          >
            <div
              class="ons-grid__col ons-col-8@m ons-col-6@l"
            >
              <div
                class="ons-input-items"
              >
                <div
                  class="ons-radios__items"
                >
                  <span
                    class="ons-radios__item"
                  >
                    <span
                      class="ons-radio"
                    >
                      <input
                        class="ons-radio__input"
                        id="no"
                        name="askToSetDate"
                        props="[object Object]"
                        type="radio"
                        value="no"
                      />
                      <label
                        class="ons-radio__label "
                        for="no"
                      >
                        No start date
                      </label>
                    </span>
                  </span>
                  <br />
                  <span
                    class="ons-radios__item"
                  >
                    <span
                      class="ons-radio"
                    >
                      <input
                        class="ons-radio__input"
                        id="yes"
                        name="askToSetDate"
                        props="[object Object]"
                        type="radio"
                        value="yes"
                      />
                      <label
                        class="ons-radio__label "
                        for="yes"
                      >
                        Yes, let me specify a start date
                      </label>
                      <span
                        class="ons-radio__other ons-radio__other--open"
                        id="yes-other-wrap"
                      >
                        <label
                          class="ons-label ons-u-fs-s--b"
                          for="set-live-date"
                        >
                          Please specify date
                        </label>
                        <input
                          class="ons-input ons-input--text ons-input-type__input ons-input--w-auto"
                          id="set-live-date"
                          name="set start date"
                          type="date"
                        />
                      </span>
                    </span>
                  </span>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-field ons-u-mb-m"
      id="radio-_r_1_"
    >
      <fieldset
        class="ons-fieldset"
      >
        <legend
          class="ons-fieldset__legend ons-u-fs-r--b"
        />
        <div
          class="ons-grid"
        >
          <div
            class="ons-grid__col ons-col-8@m ons-col-6@l"
          >
            <div
              class="ons-input-items"
            >
              <div
                class="ons-radios__items"
              >
                <span
                  class="ons-radios__item"
                >
                  <span
                    class="ons-radio"
                  >
                    <input
                      class="ons-radio__input"
                      id="no"
                      name="askToSetDate"
                      props="[object Object]"
                      type="radio"
                      value="no"
                    />
                    <label
                      class="ons-radio__label "
                      for="no"
                    >
                      No start date
                    </label>
                  </span>
                </span>
                <br />
                <span
                  class="ons-radios__item"
                >
                  <span
                    class="ons-radio"
                  >
                    <input
                      class="ons-radio__input"
                      id="yes"
                      name="askToSetDate"
                      props="[object Object]"
                      type="radio"
                      value="yes"
                    />
                    <label
                      class="ons-radio__label "
                      for="yes"
                    >
                      Yes, let me specify a start date
                    </label>
                    <span
                      class="ons-radio__other ons-radio__other--open"
                      id="yes-other-wrap"
                    >
                      <label
                        class="ons-label ons-u-fs-s--b"
                        for="set-live-date"
                      >
                        Please specify date
                      </label>
                      <input
                        class="ons-input ons-input--text ons-input-type__input ons-input--w-auto"
                        id="set-live-date"
                        name="set start date"
                        type="date"
                      />
                    </span>
                  </span>
                </span>
                <br />
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
